fix: corregindo criação de listas não modificáveis